<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_movie_fragment"
            android:icon="@drawable/ic_movie"
            android:title="@string/menu_navigation_drawer_movie" />

        <item
            android:id="@+id/nav_serial_fragment"
            android:icon="@drawable/ic_serial"
            android:title="@string/menu_navigation_drawer_serial" />
    </group>

    <group
        android:id="@+id/nav_menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_fragment"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_navigation_drawer_about" />
    </group>
</menu>